packages/@lwc/ssr-compiler/src/__tests__/fixtures/wire/errors/throws-when-adapter-is-non-module-binding/modules/x/wire/wire.js
import { wire, LightningElement } from 'lwc';
const getFoo = () => null;
export default class Test extends LightningElement {
    @wire(getFoo)
    wiredFoo;
}
